# phundrak.com

./: .dir-locals.el  .drone.yml  .editorconfig  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  README.org  about.md  app.vue  conlanging.md  docker-compose.yml  export.el  keine-tashi.md  nuxt.config.ts  package-lock.json  package.json  projects.md  resume.md  shell.nix  vocal-synthesis.md
.gitea/workflows/: deploy.yaml
.github/workflows/: deploy.yaml
.vuepress/: .dir-locals.el  config.ts  head.ts  locales.ts
.vuepress/components/: PreviewImage.vue  ResponsiveImage.vue
assets/: _fonts.scss  functions.scss  main.scss  mixins.scss
components/: Card.vue  CardList.vue  ErrorCard.vue  Footer.vue  GithubCard.vue  Header.vue  Icon.vue  IconButton.vue  IconLink.vue  InfoCard.vue  LatestGithub.vue  ListGithub.vue  Loader.vue  PersonalInfos.vue  PersonalLinks.vue  ResponsiveImage.vue
composables/: api.ts  github.ts
content/: 1.index.md  2.about.md  3.projects.md  4.conlanging.md  5.projects.md  README.md  about.md  about.org  conlanging.md  conlanging.org  find-me.md  find-me.org  headers  index.org  keine-tashi.md  keine-tashi.org  other-links  privacy.md  privacy.org  projects.md  projects.org  resume.md  resume.org  vocal-synthesis.md  vocal-synthesis.org
en/: about.md  conlanging.md  index.md  keine-tashi.md  projects.md  resume.md  vocal-synthesis.md
gemini/: .gitignore
layouts/: default.vue
lfn/: conlanging.md  index.md  keine-tashi.md  resume.md  vocal-synthesis.md
pages/: [...slug].vue
plugins/: fontawesome.js
src/: data.rs  main.rs
(+91 files in other folders)
