[package]
name = "phuncache"
version = "0.1.0"
edition = "2021"
authors = ["Lucien Cartier-Tilet <lucien@phundrak.com>"]
homepage = "https://labs.phundrak.com/phundrak/phundrak.com"
license = "AGPL-3.0"
publish = false

[dependencies]
actix-web = "4"
env_logger = "0.10.0"
derive_more = "0.99.17"
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15"
gql_client = "1.0.7"
human-panic = "1.1.0"

[[bin]]
name = "phuncache"
path = "src/main.rs"
